# uclass

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: github-action-ci.yml
docs/: requirements.txt
docs/source/: conf.py
tests/: test_helloworld.py
tests/data/: co_23-01.txt  co_hf_sample.pkl  co_hhf_sample.pkl
tests/hhf_methods/: test_ppregress.py  test_weibull5.py  weibull5.py
tests/statistics/: test_weibull.py
uclass/: __init__.py  logger.py
uclass/clitools/: print_hello_worlds.py
uclass/database/: __init__.py  mongo.py  stage_data.py
uclass/hhf_methods/: __init__.py  ppregress.py  weibull5.py
uclass/statistics/: __init__.py  distribution.py  fitting.py  logitnormal.py  weibull.py
