[project]
name = "uclass"
version = "0.0.0"
authors = [
  {name="Terrence Tsang", email="terrencetec@gmail.com"},
]
description = "USPSA classifier high hit factor Python repository"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
] 

[project.optional-dependencies]
mongo = ["pymongo"]

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uclass*"]


[project.urls]
Homepage = "https://github.com/terrencetec/uclass"
Issues = "https://github.com/terrencetec/uclass/issues"

[project.scripts]
print-hello-worlds = "uclass.clitools.print_hello_worlds:main"
